Fix channel title truncating when no button (#3897)

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -247,7 +247,7 @@
     }
   }
 
-  .p-release-data__title,
+  .p-release-data__title .has-button,
   .p-release-data__meta {
     display: block;
     overflow: hidden;
